--- a/install/install.cfg
+++ b/install/install.cfg
@@ -26,7 +26,7 @@ set -e -x
 # Configuration
 ###############################################################################
 # which user to install the code for; defaults to the user invoking this script
-REDDIT_USER=stefan
+REDDIT_USER=${REDDIT_USER:-$SUDO_USER}
 
 # the group to run reddit code as; must exist already
 REDDIT_GROUP=${REDDIT_GROUP:-nogroup}
